--- a/manual.jinja2
+++ b/manual.jinja2
@@ -1,5 +1,33 @@
 # Keyboard Name
 
-{{ keyswitch_width_mm }}
+Key switch spacing is {{ keyswitch_width_mm }}mm by {{ keyswitch_height_mm }}mm.
 
-{{ args }}
+## Key matrix
+
+```
+// config.h
+
+// USB Device descriptor parameter
+#define VENDOR_ID       0xFEED
+#define PRODUCT_ID      0x8888
+#define DEVICE_VER      0x0001
+#define MANUFACTURER    Generic
+#define PRODUCT         Keyboard
+#define DESCRIPTION     Keyboard
+
+// key matrix size
+#define MATRIX_ROWS {{ matrix_pins.rows|length }}
+#define MATRIX_COLS {{ matrix_pins.cols|length }}
+
+// key matrix pins
+#define MATRIX_ROW_PINS { {% for row in matrix_pins.rows %}{{ row }}{% if loop.last %}{% else %}, {% endif %}{% endfor %} }
+#define MATRIX_COL_PINS { {% for col in matrix_pins.cols %}{{ col }}{% if loop.last %}{% else %}, {% endif %}{% endfor %} }
+#define UNUSED_PINS
+
+// COL2ROW or ROW2COL
+#define DIODE_DIRECTION COL2ROW
+```
+
+## Debugging
+
+`{{ args }}`
