--- a/templates/manual.jinja2
+++ b/templates/manual.jinja2
@@ -1,6 +1,8 @@
 # {{ descriptors.identifier }}
 
-Key switch spacing is {{ keyswitch_width_mm }}mm by {{ keyswitch_height_mm }}mm.
+PCB is {{ pcb_width_mm }}mm by {{ pcb_height_mm }}mm. Recommended thickness
+is standard 1.6mm. Key switch spacing is {{ keyswitch_width_mm }}mm by
+{{ keyswitch_height_mm }}mm.
 
 ## Key matrix
 
