--- a/templates/manual.jinja2
+++ b/templates/manual.jinja2
@@ -1,6 +1,13 @@
 # {{ descriptors.identifier }}
 
+## Basics
+
 PCB is {{ pcb_width_mm }}mm by {{ pcb_height_mm }}mm. Recommended thickness is standard 1.6mm. Key switch spacing is {{ keyswitch_width_mm }}mm by {{ keyswitch_height_mm }}mm.
+
+## BOM
+
+{% for d in bom %}* {{ d["quantity"] }} [{{ d["description"] }}](link)
+{% endfor %}
 
 ## Key matrix
 
